--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -11257,3 +11257,34 @@ input[type="file"] {
     width: 310px;
 }
 
+body {
+    padding-top:50px;
+}
+fieldset {
+    border: thin solid #ccc; 
+    border-radius: 4px;
+    padding: 20px;
+    padding-left: 40px;
+    background: #fbfbfb;
+}
+legend {
+   color: #678;
+}
+.form-control {
+    width: 95%;
+}
+label small {
+    color: #678 !important;
+}
+span.req {
+    color:maroon;
+    font-size: 112%;
+}
+
+span.warning {
+    color: red;
+}
+
+span.valid {
+    color: green;
+}
