--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -11334,3 +11334,13 @@ section {
 .successResp {
     color: green;
 }
+
+#editor + .ck.ck-editor.invalidate{
+border: 1px solid red;
+}
+
+
+#txtAreaEditor {
+text-align: left;
+color: red;
+}
