--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -6322,6 +6322,7 @@ a.close.disabled {
 
 .toast.showing {
     opacity: 1;
+    
 }
 
 .toast.show {
@@ -11356,3 +11357,7 @@ text-align: left;
 color: red;
 }
 
+ .bs-example{
+    	margin-left: 150px;
+        
+    }
